[tool.poetry]
name = "oop"
version = "0.1.0"
description = ""
authors = ["SurPetrosian <surach2020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
